# python-library

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  RELEASE.md  dr_wd.py  pom.xml  pyproject.toml  release.sh  sonar-project.properties  tox.ini
.github/: release-please-config.json
.github/workflows/: main.yml  release.yml  unittest.yml
api/: bundle.xml  pom.xml  requirements.txt  setup.py
code/: MANIFEST.in  README.md  bundle.xml  pom.xml  requirements-dev.txt  requirements.txt  setup.py
code/examples/: README.md  app-workflow.py  create-app.py  create-component.py  create-data-object.py  create-data-record.py  create-infra-service-group.py  create-infra-service.py  deploy-app.py  jupyter-docker.yaml  jupyter-k8s.yaml  k8s_kubconfig_get.py  nuvla.conf  nuvla.conf.ks  user-create.py  user-loginout.py  utils.py
code/examples/data/: elephant.txt
code/tests/: deployment_tests.py  module_tests.py
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst
examples/: README.md  create-data-object.py  create-data-record.py  create-infra-service-cred.py  create-infra-service.py  delete-data-record.py  deploy-app.py  user-create.py  user-switchgroup.py
examples/data/: african-lion.txt  example-k8s-config.yaml
examples/data_catalogue/: consumer.py  producer.py
nuvla/: __init__.py
nuvla/api/: __init__.py  api.py  models.py
nuvla/api/resources/: base.py  callback.py  credential.py  data.py  (+5 more)
pypi/: pom.xml
rpm/: pom.xml
tests/: test_deployment.py  test_module.py
tests/utils/: create-data-records.py  deployment_live_tests.py
(+25 files in other folders)
